Issue #2996194: Pass Drupal User name / email from Profile to tawk.to

--- a/templates/tawk-to.html.twig
+++ b/templates/tawk-to.html.twig
@@ -1,6 +1,11 @@
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-  var $_Tawk_API = {}, $_Tawk_LoadStart = new Date();
+  var Tawk_API=Tawk_API||{};
+  Tawk_API.visitor = {
+    name: "{{ items.user_name }}",
+    email: "{{ items.user_email }}",
+  };
+  var $_Tawk_LoadStart = new Date();
   (function () {
     var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
     s1.async = true;
