--- a/templates/tawk-to.html.twig
+++ b/templates/tawk-to.html.twig
@@ -9,7 +9,9 @@
   (function () {
     var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
     s1.async = true;
-    s1.src = "{{ items.embed_url|raw }}/{{ items.page_id|raw }}/{{ items.widget_id|raw }}";
+    {% autoescape false %}
+    s1.src = "{{ items.embed_url }}/{{ items.page_id }}/{{ items.widget_id }}";
+    {% endautoescape %}
     s1.charset = "UTF-8";
     s1.setAttribute("crossorigin", "*");
     s0.parentNode.insertBefore(s1, s0);
