--- a/templates/tawk-to-iframe.html.twig
+++ b/templates/tawk-to-iframe.html.twig
@@ -1,5 +1,5 @@
 {% autoescape false %}
-<script type="text/javascript" src="{{ items.baseUrl }}/public/js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <iframe id="tawkIframe" src="" style="min-height: 400px; width : 100%; border: none">
 </iframe>
